public class Affinity {
}
